RoslynRuleEngineConsole/xpath1/XPath1Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from XPath1.g4 by ANTLR 4.5.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

using System;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.1")]
[System.CLSCompliant(false)]
public partial class XPath1Parser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, PATHSEP=9, 
		ABRPATH=10, LPAR=11, RPAR=12, LBRAC=13, RBRAC=14, MINUS=15, PLUS=16, DOT=17, 
		MUL=18, DOTDOT=19, AT=20, COMMA=21, PIPE=22, LESS=23, MORE=24, LE=25, 
		GE=26, COLON=27, CC=28, APOS=29, QUOT=30, NodeType=31, Number=32, AxisName=33, 
		Literal=34, WS=35, NCName=36;
	public const int
		RULE_main = 0, RULE_locationPath = 1, RULE_absoluteLocationPathNoroot = 2, 
		RULE_relativeLocationPath = 3, RULE_step = 4, RULE_axisSpecifier = 5, 
		RULE_nodeTest = 6, RULE_predicate = 7, RULE_abbreviatedStep = 8, RULE_expr = 9, 
		RULE_primaryExpr = 10, RULE_functionCall = 11, RULE_unionExprNoRoot = 12, 
		RULE_pathExprNoRoot = 13, RULE_filterExpr = 14, RULE_orExpr = 15, RULE_andExpr = 16, 
		RULE_equalityExpr = 17, RULE_relationalExpr = 18, RULE_additiveExpr = 19, 
		RULE_multiplicativeExpr = 20, RULE_unaryExprNoRoot = 21, RULE_qName = 22, 
		RULE_functionName = 23, RULE_variableReference = 24, RULE_nameTest = 25, 
		RULE_nCName = 26;
	public static readonly string[] ruleNames = {
		"main", "locationPath", "absoluteLocationPathNoroot", "relativeLocationPath", 
		"step", "axisSpecifier", "nodeTest", "predicate", "abbreviatedStep", "expr", 
		"primaryExpr", "functionCall", "unionExprNoRoot", "pathExprNoRoot", "filterExpr", 
		"orExpr", "andExpr", "equalityExpr", "relationalExpr", "additiveExpr", 
		"multiplicativeExpr", "unaryExprNoRoot", "qName", "functionName", "variableReference", 
		"nameTest", "nCName"
	};

	private static readonly string[] _LiteralNames = {
		null, "'processing-instruction'", "' or '", "' and '", "'='", "'!='", 
		"'div'", "'mod'", "'$'", "'/'", "'//'", "'('", "')'", "'['", "']'", "'-'", 
		"'+'", "'.'", "'*'", "'..'", "'@'", "','", "'|'", "'<'", "'>'", "'<='", 
		"'>='", "':'", "'::'", "'''", "'\"'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, "PATHSEP", "ABRPATH", 
		"LPAR", "RPAR", "LBRAC", "RBRAC", "MINUS", "PLUS", "DOT", "MUL", "DOTDOT", 
		"AT", "COMMA", "PIPE", "LESS", "MORE", "LE", "GE", "COLON", "CC", "APOS", 
		"QUOT", "NodeType", "Number", "AxisName", "Literal", "WS", "NCName"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "XPath1.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public XPath1Parser(ITokenStream input)
		: base(input)
	{
		Interpreter = new ParserATNSimulator(this,_ATN);
	}
	public partial class MainContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public MainContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_main; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMain(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MainContext main() {
		MainContext _localctx = new MainContext(Context, State);
		EnterRule(_localctx, 0, RULE_main);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54; expr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LocationPathContext : ParserRuleContext {
		public RelativeLocationPathContext relativeLocationPath() {
			return GetRuleContext<RelativeLocationPathContext>(0);
		}
		public AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() {
			return GetRuleContext<AbsoluteLocationPathNorootContext>(0);
		}
		public LocationPathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_locationPath; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLocationPath(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LocationPathContext locationPath() {
		LocationPathContext _localctx = new LocationPathContext(Context, State);
		EnterRule(_localctx, 2, RULE_locationPath);
		try {
			State = 58;
			switch (TokenStream.La(1)) {
			case T__0:
			case DOT:
			case MUL:
			case DOTDOT:
			case AT:
			case NodeType:
			case AxisName:
			case NCName:
				EnterOuterAlt(_localctx, 1);
				{
				State = 56; relativeLocationPath();
				}
				break;
			case PATHSEP:
			case ABRPATH:
				EnterOuterAlt(_localctx, 2);
				{
				State = 57; absoluteLocationPathNoroot();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AbsoluteLocationPathNorootContext : ParserRuleContext {
		public ITerminalNode PATHSEP() { return GetToken(XPath1Parser.PATHSEP, 0); }
		public RelativeLocationPathContext relativeLocationPath() {
			return GetRuleContext<RelativeLocationPathContext>(0);
		}
		public AbsoluteLocationPathNorootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_absoluteLocationPathNoroot; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAbsoluteLocationPathNoroot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AbsoluteLocationPathNorootContext absoluteLocationPathNoroot() {
		AbsoluteLocationPathNorootContext _localctx = new AbsoluteLocationPathNorootContext(Context, State);
		EnterRule(_localctx, 4, RULE_absoluteLocationPathNoroot);
		try {
			State = 64;
			switch (TokenStream.La(1)) {
			case PATHSEP:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60; Match(PATHSEP);
				State = 61; relativeLocationPath();
				}
				break;
			case ABRPATH:
				EnterOuterAlt(_localctx, 2);
				{
				State = 62; Match(ABRPATH);
				State = 63; relativeLocationPath();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelativeLocationPathContext : ParserRuleContext {
		public StepContext[] step() {
			return GetRuleContexts<StepContext>();
		}
		public StepContext step(int i) {
			return GetRuleContext<StepContext>(i);
		}
		public ITerminalNode[] PATHSEP() { return GetTokens(XPath1Parser.PATHSEP); }
		public ITerminalNode PATHSEP(int i) {
			return GetToken(XPath1Parser.PATHSEP, i);
		}
		public ITerminalNode[] ABRPATH() { return GetTokens(XPath1Parser.ABRPATH); }
		public ITerminalNode ABRPATH(int i) {
			return GetToken(XPath1Parser.ABRPATH, i);
		}
		public RelativeLocationPathContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relativeLocationPath; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitRelativeLocationPath(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public RelativeLocationPathContext relativeLocationPath() {
		RelativeLocationPathContext _localctx = new RelativeLocationPathContext(Context, State);
		EnterRule(_localctx, 6, RULE_relativeLocationPath);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; step();
			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.La(1);
			while (_la==PATHSEP || _la==ABRPATH) {
				{
				{
				State = 67;
				_la = TokenStream.La(1);
				if ( !(_la==PATHSEP || _la==ABRPATH) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
				    Consume();
				}
				State = 68; step();
				}
				}
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StepContext : ParserRuleContext {
		public AxisSpecifierContext axisSpecifier() {
			return GetRuleContext<AxisSpecifierContext>(0);
		}
		public NodeTestContext nodeTest() {
			return GetRuleContext<NodeTestContext>(0);
		}
		public PredicateContext[] predicate() {
			return GetRuleContexts<PredicateContext>();
		}
		public PredicateContext predicate(int i) {
			return GetRuleContext<PredicateContext>(i);
		}
		public AbbreviatedStepContext abbreviatedStep() {
			return GetRuleContext<AbbreviatedStepContext>(0);
		}
		public StepContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_step; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStep(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StepContext step() {
		StepContext _localctx = new StepContext(Context, State);
		EnterRule(_localctx, 8, RULE_step);
		int _la;
		try {
			State = 83;
			switch (TokenStream.La(1)) {
			case T__0:
			case MUL:
			case AT:
			case NodeType:
			case AxisName:
			case NCName:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74; axisSpecifier();
				State = 75; nodeTest();
				State = 79;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==LBRAC) {
					{
					{
					State = 76; predicate();
					}
					}
					State = 81;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				}
				break;
			case DOT:
			case DOTDOT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 82; abbreviatedStep();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AxisSpecifierContext : ParserRuleContext {
		public ITerminalNode AxisName() { return GetToken(XPath1Parser.AxisName, 0); }
		public AxisSpecifierContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_axisSpecifier; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAxisSpecifier(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AxisSpecifierContext axisSpecifier() {
		AxisSpecifierContext _localctx = new AxisSpecifierContext(Context, State);
		EnterRule(_localctx, 10, RULE_axisSpecifier);
		int _la;
		try {
			State = 90;
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 85; Match(AxisName);
				State = 86; Match(CC);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 88;
				_la = TokenStream.La(1);
				if (_la==AT) {
					{
					State = 87; Match(AT);
					}
				}

				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class NodeTestContext : ParserRuleContext {
		public NameTestContext nameTest() {
			return GetRuleContext<NameTestContext>(0);
		}
		public ITerminalNode NodeType() { return GetToken(XPath1Parser.NodeType, 0); }
		public ITerminalNode Literal() { return GetToken(XPath1Parser.Literal, 0); }
		public NodeTestContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_nodeTest; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNodeTest(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public NodeTestContext nodeTest() {
		NodeTestContext _localctx = new NodeTestContext(Context, State);
		EnterRule(_localctx, 12, RULE_nodeTest);
		try {
			State = 100;
			switch (TokenStream.La(1)) {
			case MUL:
			case AxisName:
			case NCName:
				EnterOuterAlt(_localctx, 1);
				{
				State = 92; nameTest();
				}
				break;
			case NodeType:
				EnterOuterAlt(_localctx, 2);
				{
				State = 93; Match(NodeType);
				State = 94; Match(LPAR);
				State = 95; Match(RPAR);
				}
				break;
			case T__0:
				EnterOuterAlt(_localctx, 3);
				{
				State = 96; Match(T__0);
				State = 97; Match(LPAR);
				State = 98; Match(Literal);
				State = 99; Match(RPAR);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PredicateContext : ParserRuleContext {
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_predicate; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPredicate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PredicateContext predicate() {
		PredicateContext _localctx = new PredicateContext(Context, State);
		EnterRule(_localctx, 14, RULE_predicate);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102; Match(LBRAC);
			State = 103; expr();
			State = 104; Match(RBRAC);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AbbreviatedStepContext : ParserRuleContext {
		public AbbreviatedStepContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_abbreviatedStep; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAbbreviatedStep(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AbbreviatedStepContext abbreviatedStep() {
		AbbreviatedStepContext _localctx = new AbbreviatedStepContext(Context, State);
		EnterRule(_localctx, 16, RULE_abbreviatedStep);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 106;
			_la = TokenStream.La(1);
			if ( !(_la==DOT || _la==DOTDOT) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public OrExprContext orExpr() {
			return GetRuleContext<OrExprContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(Context, State);
		EnterRule(_localctx, 18, RULE_expr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 108; orExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrimaryExprContext : ParserRuleContext {
		public VariableReferenceContext variableReference() {
			return GetRuleContext<VariableReferenceContext>(0);
		}
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode Literal() { return GetToken(XPath1Parser.Literal, 0); }
		public ITerminalNode Number() { return GetToken(XPath1Parser.Number, 0); }
		public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		public PrimaryExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primaryExpr; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimaryExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrimaryExprContext primaryExpr() {
		PrimaryExprContext _localctx = new PrimaryExprContext(Context, State);
		EnterRule(_localctx, 20, RULE_primaryExpr);
		try {
			State = 118;
			switch (TokenStream.La(1)) {
			case T__7:
				EnterOuterAlt(_localctx, 1);
				{
				State = 110; variableReference();
				}
				break;
			case LPAR:
				EnterOuterAlt(_localctx, 2);
				{
				State = 111; Match(LPAR);
				State = 112; expr();
				State = 113; Match(RPAR);
				}
				break;
			case Literal:
				EnterOuterAlt(_localctx, 3);
				{
				State = 115; Match(Literal);
				}
				break;
			case Number:
				EnterOuterAlt(_localctx, 4);
				{
				State = 116; Match(Number);
				}
				break;
			case AxisName:
			case NCName:
				EnterOuterAlt(_localctx, 5);
				{
				State = 117; functionCall();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FunctionCallContext : ParserRuleContext {
		public FunctionNameContext functionName() {
			return GetRuleContext<FunctionNameContext>(0);
		}
		public ExprContext[] expr() {
			return GetRuleContexts<ExprContext>();
		}
		public ExprContext expr(int i) {
			return GetRuleContext<ExprContext>(i);
		}
		public FunctionCallContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_functionCall; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFunctionCall(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FunctionCallContext functionCall() {
		FunctionCallContext _localctx = new FunctionCallContext(Context, State);
		EnterRule(_localctx, 22, RULE_functionCall);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 120; functionName();
			State = 121; Match(LPAR);
			State = 130;
			_la = TokenStream.La(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__7) | (1L << PATHSEP) | (1L << ABRPATH) | (1L << LPAR) | (1L << MINUS) | (1L << DOT) | (1L << MUL) | (1L << DOTDOT) | (1L << AT) | (1L << NodeType) | (1L << Number) | (1L << AxisName) | (1L << Literal) | (1L << NCName))) != 0)) {
				{
				State = 122; expr();
				State = 127;
				ErrorHandler.Sync(this);
				_la = TokenStream.La(1);
				while (_la==COMMA) {
					{
					{
					State = 123; Match(COMMA);
					State = 124; expr();
					}
					}
					State = 129;
					ErrorHandler.Sync(this);
					_la = TokenStream.La(1);
				}
				}
			}

			State = 132; Match(RPAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class UnionExprNoRootContext : ParserRuleContext {
		public PathExprNoRootContext pathExprNoRoot() {
			return GetRuleContext<PathExprNoRootContext>(0);
		}
		public UnionExprNoRootContext unionExprNoRoot() {
			return GetRuleContext<UnionExprNoRootContext>(0);
		}
		public ITerminalNode PATHSEP() { return GetToken(XPath1Parser.PATHSEP, 0); }
		public UnionExprNoRootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_unionExprNoRoot; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitUnionExprNoRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public UnionExprNoRootContext unionExprNoRoot() {
		UnionExprNoRootContext _localctx = new UnionExprNoRootContext(Context, State);
		EnterRule(_localctx, 24, RULE_unionExprNoRoot);
		int _la;
		try {
			State = 142;
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 134; pathExprNoRoot();
				State = 137;
				_la = TokenStream.La(1);
				if (_la==PIPE) {
					{
					State = 135; Match(PIPE);
					State = 136; unionExprNoRoot();
					}
				}

				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 139; Match(PATHSEP);
				State = 140; Match(PIPE);
				State = 141; unionExprNoRoot();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PathExprNoRootContext : ParserRuleContext {
		public LocationPathContext locationPath() {
			return GetRuleContext<LocationPathContext>(0);
		}
		public FilterExprContext filterExpr() {
			return GetRuleContext<FilterExprContext>(0);
		}
		public RelativeLocationPathContext relativeLocationPath() {
			return GetRuleContext<RelativeLocationPathContext>(0);
		}
		public ITerminalNode PATHSEP() { return GetToken(XPath1Parser.PATHSEP, 0); }
		public PathExprNoRootContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pathExprNoRoot; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IXPath1Visitor<TResult> typedVisitor = visitor as IXPath1Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPathExprNoRoot(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PathExprNoRootContext pathExprNoRoot() {
		PathExprNoRootContext _localctx = new PathExprNoRootContext(Context, State);
		EnterRule(_localctx, 26, RULE_pathExprNoRoot);
		int _la;
		try {
			State = 150;
			switch ( Interpreter.AdaptivePredict(TokenStream,14,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 144; locationPath();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 145; filterExpr();
				State = 148;
				_la = TokenStream.La(1);
				if (_la==PATHSEP || _la==ABRPATH) {
					{
					State = 146;
					_la = TokenStream.La(1);
					if ( !(_la==PATHSEP || _la==ABRPATH) ) {
					ErrorHandler.RecoverInline(this);
					}
					else {
					    Consume();
					}
					State = 147; relativeLocationPath();
					}
				}
